<resources>
    <string name="app_name">ProgrammeerProjectDaniel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Home">Home</string>
    <string name="Dictionary">Dictionary</string>
    <string name="Practise">Practise</string>
    <string name="Settings">Settings</string>
    <string name="listTitle">Your word lists</string>
    <string name="WOTD">Word of the day</string>
    <string name="addDutchHint">Add Dutch word</string>
    <string name="addListTitle">Add name of list</string>
    <string name="addButton">Add</string>
    <string name="doneButton">Done</string>
    <string name="addEnglishHint">Add English word</string>
    <string name="databaseTitle">Create your own word list</string>
    <string name="translationHome">Translation:</string>
    <string name="exampleHome">Example:</string>
    <string name="scoreText">Score:</string>
    <string name="translation">Translation</string>
    <string name="wordType">Word type</string>
    <string name="listHint">Click a list to practise - Hold a list to delete</string>
    <string name="action_settings">Settings</string>
    <string name="wordHint">Enter translation here</string>
    <string name="translateRequest">Dictionary</string>
    <string name="submitButton">Submit</string>
    <string name="translateHint">Enter the word you wish to translate</string>
    <string name="title_activity_dictionary">Dictionary</string>
    <string name="title_activity_practise">Practise</string>
    <string name="title_activity_exercises">Exercises</string>
    <string name="title_activity_settings">Settings</string>

    <string-array name="languages">
        <item>EN-NL</item>
        <item>NL-EN</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
