<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeButton"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/Home" />
        <item
            android:id="@+id/dictionaryButton"
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            android:title="@string/Dictionary" />
        <item
            android:id="@+id/practiseButton"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/Practise" />
        <item
            android:id="@+id/settingsButton"
            android:icon="@drawable/ic_menu_preferences"
            android:title="@string/Settings" />
    </group>
</menu>
