<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mprog.nl.programmeerprojectdaniel.AddWords">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/databaseTitle"
        android:textAlignment="center"
        android:textStyle="bold"
        android:hint="@string/databaseTitle"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:id="@+id/addDutch"
        android:hint="@string/addDutchHint"
        android:layout_below="@+id/databaseTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp" />

    <EditText
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:hint="@string/addEnglishHint"
        android:id="@+id/addEnglish"
        android:layout_below="@+id/addDutch"
        android:layout_alignLeft="@+id/addDutch"
        android:layout_alignStart="@+id/addDutch" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addButton"
        android:id="@+id/addButton"
        android:layout_below="@+id/addEnglish"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/doneButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:text="@string/doneButton" />

</RelativeLayout>
