<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mprog.nl.programmeerprojectdaniel.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="44sp"
        android:text="@string/WOTD"
        android:id="@+id/wordText"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="32sp"
        android:text="@string/translationHome"
        android:id="@+id/translationText"
        android:textStyle="bold"
        android:layout_marginTop="133dp"
        android:layout_below="@+id/wordText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="32sp"
        android:text="@string/exampleHome"
        android:id="@+id/exampleText"
        android:textStyle="bold"
        android:layout_marginTop="117dp"
        android:layout_below="@+id/translationText"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
