<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mprog.nl.programmeerprojectdaniel.Dictionary"
    tools:showIn="@layout/app_bar_dictionary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="44sp"
        android:text="@string/translateRequest"
        android:id="@+id/translateRequest"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/translationInput"
        android:hint="@string/translateHint"
        android:layout_below="@+id/translateRequest"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/languageSpinner"
        android:entries="@array/languages"
        android:layout_above="@+id/translationResult"
        android:layout_alignRight="@+id/translateButton"
        android:layout_alignEnd="@+id/translateButton"
        android:layout_alignLeft="@+id/translateButton"
        android:layout_alignStart="@+id/translateButton" />

    <EditText
        android:layout_width="wrap_content"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAlignment="center"
        android:id="@+id/translationResult"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:inputType="text"
        android:textAlignment="center"
        android:id="@+id/wordType"
        android:visibility="visible"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/translationResult"
        android:layout_alignLeft="@+id/translationResult"
        android:layout_alignStart="@+id/translationResult" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translation"
        android:id="@+id/translateButton"
        android:layout_below="@+id/translationInput"
        android:onClick="Translate"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
